--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ $(window).load(function() {
 		<div class="row featured-section">
 
 			<div class="columns four">
-				<img src="img/design.png" alt="design">
+				<img src="img/pencil.png" alt="design">
 				<h3>Design</h3>
 				<p>Developing concepts and artwork, creating graphic design solutions from concept through to completion.<br><strong>Skills:- Adobe Photoshop, Illustrator,<br>In Design.</strong></p>
 			</div>
